--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 
 <h1>HTML Links</h1>
 
-<p><a href=".\index2.html">index.html</a></p>
-<p><a href=".\index3.html">index.html</a></p>
+<p><a href=".\index2.html">homework2</a></p>
+<p><a href=".\index3.html">homework3</a></p>
 
 </body>
 </html>
