--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 
 <p><a href=".\index2.html">homework2</a></p>
 <p><a href=".\index3.html">homework3</a></p>
+<p><a href=".\index3.html">homework4</a></p>
 
 </body>
 </html>
